update Dockerfile
- change base image
- use multi stage build to reduce space
- add user